--- a/src/pages/testing/test-creation/vehicle/vehicle-brakes/vehicle-brakes.html
+++ b/src/pages/testing/test-creation/vehicle/vehicle-brakes/vehicle-brakes.html
@@ -7,114 +7,137 @@
   </ion-header>
   
 <ion-content no-padding>
-    <div text-uppercase text-center class="vehicle-header-vrm-number">
-        AA12 BCD
-    </div>
-    <ion-list class="vehicle-list">
-        <ion-list-header>
-        </ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Brake code</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>100F05</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Service</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>3 axle split</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Secondary</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Split service brake or handbrake</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Parking</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Axle 2</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Retarder 1</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Hydraulic</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left> 
-            <ion-label>
-                <h3>Retarder 2</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Exhaust</p>
-            </div>
-        </ion-item>
-    </ion-list>
-    <ion-list class="vehicle-list">
-        <ion-list-header padding-left padding-right text-wrap class="list-header-double">BRAKE FORCE<br> NO WHEELS LOCKED</ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Service</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>7009</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Secondary</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>3000</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Parking</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Axle 2</p>
-            </div>
-        </ion-item>
-    </ion-list>
-    <ion-list class="vehicle-list">
-        <ion-list-header padding-left padding-right text-wrap  class="list-header-double">BRAKE FORCE<br> UP TO AND INCLUDING HALF WHEELS LOCKED</ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Service</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>7009</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Secondary</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>3000</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Parking</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>2001</p>
-            </div>
-        </ion-item>
-    </ion-list>
+    <ng-container *ngFor="let vrm of vehicleData.vrms">
+        <div text-uppercase 
+             text-center 
+             class="vehicle-header-vrm-number" 
+             *ngIf="vrm.isPrimary">
+            {{ vrm.vrm }}
+        </div>
+    </ng-container>
+    <ng-container *ngFor="let techRecord of vehicleData.techRecord">
+        <ng-container *ngIf="commonFunc.checkForMatch(techRecord.statusCode, 'current')">
+            
+            <ion-list class="vehicle-list">
+                <ion-list-header>
+                </ion-list-header>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Brake code</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakes.brakeCode }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Service</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakes.dataTrBrakeOne }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Secondary</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakes.dataTrBrakeTwo }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Parking</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakes.dataTrBrakeThree }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Retarder 1</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakes.retarderBrakeOne }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left> 
+                    <ion-label>
+                        <h3>Retarder 2</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakes.retarderBrakeTwo }}</p>
+                    </div>
+                </ion-item>
+            </ion-list>
+
+            <ion-list class="vehicle-list">
+                    <ion-list-header padding-left 
+                                     padding-right 
+                                     text-wrap 
+                                     class="list-header-double">
+                                        BRAKE FORCE<br> NO WHEELS LOCKED
+                    </ion-list-header>
+                    <ion-item margin-left>
+                        <ion-label>
+                            <h3>Service</h3>
+                        </ion-label>
+                        <div item-content padding-right>
+                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.serviceBrakeForce }}</p>
+                        </div>
+                    </ion-item>
+                    <ion-item margin-left>
+                        <ion-label>
+                            <h3>Secondary</h3>
+                        </ion-label>
+                        <div item-content padding-right>
+                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.secondaryBrakeForce }}</p>
+                        </div>
+                    </ion-item>
+                    <ion-item margin-left>
+                        <ion-label>
+                            <h3>Parking</h3>
+                        </ion-label>
+                        <div item-content padding-right>
+                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.parkingBrakeForce }}</p>
+                        </div>
+                    </ion-item>
+                </ion-list>
+
+                <ion-list class="vehicle-list">
+                    <ion-list-header padding-left 
+                                     padding-right 
+                                     text-wrap  
+                                     class="list-header-double">
+                                        BRAKE FORCE<br> UP TO AND INCLUDING HALF WHEELS LOCKED
+                    </ion-list-header>
+                    <ion-item margin-left>
+                        <ion-label>
+                            <h3>Service</h3>
+                        </ion-label>
+                        <div item-content padding-right>
+                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.serviceBrakeForce }}</p>
+                        </div>
+                    </ion-item>
+                    <ion-item margin-left>
+                        <ion-label>
+                            <h3>Secondary</h3>
+                        </ion-label>
+                        <div item-content padding-right>
+                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.secondaryBrakeForce }}</p>
+                        </div>
+                    </ion-item>
+                    <ion-item margin-left>
+                        <ion-label>
+                            <h3>Parking</h3>
+                        </ion-label>
+                        <div item-content padding-right>
+                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.parkingBrakeForce }}</p>
+                        </div>
+                    </ion-item>
+                </ion-list>
+
+        </ng-container>
+    </ng-container>
 </ion-content>
   
