--- a/src/pages/testing/test-creation/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/test-creation/vehicle/vehicle-details/vehicle-details.html
@@ -1,8 +1,15 @@
 <ion-header>
     <ion-navbar>
         <ion-title margin-left>
-            <span *ngIf="vehicle.type != 'Trailer'">Vehicle details</span>
-            <span *ngIf="vehicle.type == 'Trailer'">Trailer details</span>
+            <ng-container *ngFor="let techRecord of vehicleData.techRecord">
+                <span *ngIf="commonFunc.checkForMatch(techRecord.vehicleType, 'trl');
+                            else showVehicleDetailsTitle">
+                    Trailer details
+                </span>
+                <ng-template #showVehicleDetailsTitle>
+                    Vehicle details
+                </ng-template>
+            </ng-container>
         </ion-title>
         <ion-buttons end *ngIf="testReport">
             <button ion-button (click)="goToPreparerPage()">
@@ -13,112 +20,141 @@
 </ion-header>
 
 <ion-content no-padding>
-    <div text-uppercase text-center class="vehicle-header-vrm-number">
-        AA12 BCD
-    </div>
+    <ng-container *ngFor="let vrm of vehicleData.vrms">
+        <div text-uppercase 
+             text-center 
+             class="vehicle-header-vrm-number" 
+             *ngIf="vrm.isPrimary">
+            {{ vrm.vrm }}
+        </div>
+    </ng-container>
+
     <ion-list class="vehicle-list">
         <ion-list-header padding-left padding-right>
-            <span *ngIf="vehicle.type != 'Trailer'">VEHICLE SUMMARY</span>
-            <span *ngIf="vehicle.type == 'Trailer'">TRAILER SUMMARY</span>
+            <ng-container *ngFor="let techRecord of vehicleData.techRecord">
+                <span *ngIf="commonFunc.checkForMatch(techRecord.vehicleType, 'trl');
+                             else showVehicleSummaryTitle">
+                    TRAILER SUMMARY
+                </span>
+                <ng-template #showVehicleSummaryTitle>
+                    VEHICLE SUMMARY
+                </ng-template>
+            </ng-container>
         </ion-list-header>
         <ion-item margin-left>
             <ion-label>
                 <h3>VIN / Chassis number</h3>
             </ion-label>
             <div item-content padding-right>
-                <p>ABCDE1234FGHIJ5678</p>
+                <p>{{ vehicleData.vin }}</p>
             </div>
         </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Chassis make</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Volvo</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Chassis model</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>B12M</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Body make</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Van Hool</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Body model</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>Astrobel</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Body type</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>D</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Year of manufacture</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>2018</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Date of first registration</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>1/10/2018</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Axles</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>2</p>
-            </div>
-        </ion-item>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>Brake code</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>100A01</p>
-            </div>
-        </ion-item>
+        <ng-container *ngFor="let techRecord of vehicleData.techRecord">
+            <ng-container *ngIf="commonFunc.checkForMatch(techRecord.statusCode, 'current')">
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Chassis make</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.chassisMake }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Chassis model</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.chassisModel }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Body make</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.bodyMake }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Body model</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.bodyModel }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Body type</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.bodyType }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Year of manufacture</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.manufactureDate }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Date of first registration</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.regnDate | date: dateFormat }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Axles</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.noOfAxles }}</p>
+                    </div>
+                </ion-item>
+                <ion-item margin-left>
+                    <ion-label>
+                        <h3>Brake code</h3>
+                    </ion-label>
+                    <div item-content padding-right>
+                        <p>{{ techRecord.brakeCode }}</p>
+                    </div>
+                </ion-item>
+            </ng-container>
+        </ng-container>
     </ion-list>
 
     <ion-list class="vehicle-list">
         <ion-list-header padding-left padding-right>VIEW MORE INFORMATION</ion-list-header>
         <button ion-item margin-left>
-            <h3>Vehicle test history</h3>
+            <ng-container *ngFor="let techRecord of vehicleData.techRecord">
+                <h3>
+                    <span *ngIf="commonFunc.checkForMatch(techRecord.vehicleType, 'trl');
+                                else showVehicleTestHistoryTitle">
+                        Trailer
+                    </span>
+                    <ng-template #showVehicleTestHistoryTitle>
+                        Vehicle
+                    </ng-template>
+                    test history
+                </h3>
+            </ng-container>
         </button>
-        <button ion-item margin-left (click)="showVehicleBrakes()">
+        <button ion-item margin-left (click)="showMoreDetails('VehicleBrakesPage')">
             <h3>Brakes</h3>
         </button>
-        <button ion-item margin-left (click)="showVehicleWeights()">
+        <button ion-item margin-left (click)="showMoreDetails('VehicleWeightsPage')">
             <h3>Weights</h3>
         </button>
-        <button ion-item margin-left (click)="showVehicleTyres()">
+        <button ion-item margin-left (click)="showMoreDetails('VehicleTyresPage')">
             <h3>Tyres</h3>
         </button>
-        <button ion-item margin-left (click)="showVehicleAdditional()">
+        <button ion-item margin-left (click)="showMoreDetails('VehicleAdditionalPage')">
             <h3>Additional vehicle details</h3>
         </button>
     </ion-list>
+    
 </ion-content>
