--- a/src/pages/testing/test-creation/add-preparer/add-preparer.html
+++ b/src/pages/testing/test-creation/add-preparer/add-preparer.html
@@ -1,11 +1,5 @@
 <ion-header transforming-searchBar [searchBarElemRef]="searchBar">
-  <ion-navbar hideBackButton="true">
-    <ion-buttons start>
-      <button ion-button (click)="cancelPreparer()">
-        <ion-icon ios="ios-arrow-back" class="button__custom-back"></ion-icon>
-        Vehicle details
-      </button>
-    </ion-buttons>
+  <ion-navbar>
     <ion-title margin-left>Select preparer</ion-title>
   </ion-navbar>
   <ion-toolbar>
